Fixing horizontal scroll issues.

--- a/app/src/reset.css
+++ b/app/src/reset.css
@@ -2,6 +2,8 @@ body,
 html {
   height: inherit;
   overflow-y: auto !important;
+  max-width: 100%;
+  overflow-x: hidden;  
 }
 
 /* .container.fill-height {
